BASIQuinhoParser.py
# Generated from BASIQuinho.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BASIQuinhoParser ( Parser ):

    grammarFileName = "BASIQuinho.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "','", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "')'", "'INPUT'", "'PRINT'", "'LET'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INPUT", "PRINT", "LET", "ID", "NUMBER", 
                      "STRING", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_inputStmt = 2
    RULE_printStmt = 3
    RULE_letStmt = 4
    RULE_exprList = 5
    RULE_expr = 6
    RULE_term = 7
    RULE_factor = 8

    ruleNames =  [ "prog", "stmt", "inputStmt", "printStmt", "letStmt", 
                   "exprList", "expr", "term", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    INPUT=9
    PRINT=10
    LET=11
    ID=12
    NUMBER=13
    STRING=14
    NEWLINE=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BASIQuinhoParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BASIQuinhoParser.StmtContext)
            else:
                return self.getTypedRuleContext(BASIQuinhoParser.StmtContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BASIQuinhoParser.NEWLINE)
            else:
                return self.getToken(BASIQuinhoParser.NEWLINE, i)

        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = BASIQuinhoParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 21
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==15:
                        self.state = 18
                        self.match(BASIQuinhoParser.NEWLINE)
                        self.state = 23
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 24
                    self.stmt()

                else:
                    raise NoViableAltException(self)
                self.state = 27 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 29
                self.match(BASIQuinhoParser.NEWLINE)
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.match(BASIQuinhoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintStatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BASIQuinhoParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printStmt(self):
            return self.getTypedRuleContext(BASIQuinhoParser.PrintStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)


    class InputStatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BASIQuinhoParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def inputStmt(self):
            return self.getTypedRuleContext(BASIQuinhoParser.InputStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStatement" ):
                listener.enterInputStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStatement" ):
                listener.exitInputStatement(self)


    class LetStatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BASIQuinhoParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def letStmt(self):
            return self.getTypedRuleContext(BASIQuinhoParser.LetStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatement" ):
                listener.enterLetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatement" ):
                listener.exitLetStatement(self)



    def stmt(self):

        localctx = BASIQuinhoParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                localctx = BASIQuinhoParser.InputStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.inputStmt()
                pass
            elif token in [10]:
                localctx = BASIQuinhoParser.PrintStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.printStmt()
                pass
            elif token in [11]:
                localctx = BASIQuinhoParser.LetStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.letStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(BASIQuinhoParser.INPUT, 0)

        def ID(self):
            return self.getToken(BASIQuinhoParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(BASIQuinhoParser.NEWLINE, 0)

        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_inputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStmt" ):
                listener.enterInputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStmt" ):
                listener.exitInputStmt(self)




    def inputStmt(self):

        localctx = BASIQuinhoParser.InputStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inputStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(BASIQuinhoParser.INPUT)
            self.state = 43
            self.match(BASIQuinhoParser.ID)
            self.state = 44
            self.match(BASIQuinhoParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(BASIQuinhoParser.PRINT, 0)

        def exprList(self):
            return self.getTypedRuleContext(BASIQuinhoParser.ExprListContext,0)


        def NEWLINE(self):
            return self.getToken(BASIQuinhoParser.NEWLINE, 0)

        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)




    def printStmt(self):

        localctx = BASIQuinhoParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(BASIQuinhoParser.PRINT)
            self.state = 47
            self.exprList()
            self.state = 48
            self.match(BASIQuinhoParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(BASIQuinhoParser.LET, 0)

        def ID(self):
            return self.getToken(BASIQuinhoParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BASIQuinhoParser.ExprContext,0)


        def NEWLINE(self):
            return self.getToken(BASIQuinhoParser.NEWLINE, 0)

        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_letStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStmt" ):
                listener.enterLetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStmt" ):
                listener.exitLetStmt(self)




    def letStmt(self):

        localctx = BASIQuinhoParser.LetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_letStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(BASIQuinhoParser.LET)
            self.state = 51
            self.match(BASIQuinhoParser.ID)
            self.state = 52
            self.match(BASIQuinhoParser.T__0)
            self.state = 53
            self.expr()
            self.state = 54
            self.match(BASIQuinhoParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BASIQuinhoParser.ExprContext)
            else:
                return self.getTypedRuleContext(BASIQuinhoParser.ExprContext,i)


        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_exprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprList" ):
                listener.enterExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprList" ):
                listener.exitExprList(self)




    def exprList(self):

        localctx = BASIQuinhoParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.expr()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 57
                self.match(BASIQuinhoParser.T__1)
                self.state = 58
                self.expr()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BASIQuinhoParser.TermContext)
            else:
                return self.getTypedRuleContext(BASIQuinhoParser.TermContext,i)


        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = BASIQuinhoParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.term()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==4:
                self.state = 65
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self.term()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BASIQuinhoParser.FactorContext)
            else:
                return self.getTypedRuleContext(BASIQuinhoParser.FactorContext,i)


        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = BASIQuinhoParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.factor()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 73
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 74
                self.factor()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BASIQuinhoParser.RULE_factor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VariableContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BASIQuinhoParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BASIQuinhoParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)


    class NumberContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BASIQuinhoParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(BASIQuinhoParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)


    class StringContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BASIQuinhoParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(BASIQuinhoParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class ParenthesesContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BASIQuinhoParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BASIQuinhoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentheses" ):
                listener.enterParentheses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentheses" ):
                listener.exitParentheses(self)



    def factor(self):

        localctx = BASIQuinhoParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_factor)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                localctx = BASIQuinhoParser.NumberContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(BASIQuinhoParser.NUMBER)
                pass
            elif token in [14]:
                localctx = BASIQuinhoParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(BASIQuinhoParser.STRING)
                pass
            elif token in [12]:
                localctx = BASIQuinhoParser.VariableContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(BASIQuinhoParser.ID)
                pass
            elif token in [7]:
                localctx = BASIQuinhoParser.ParenthesesContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.match(BASIQuinhoParser.T__6)
                self.state = 84
                self.expr()
                self.state = 85
                self.match(BASIQuinhoParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





